--- a/templates/error_404.html
+++ b/templates/error_404.html
@@ -1,1 +1,7 @@
 {% extends "default.html" %}
+
+
+{% block content %}
+    <h1> {{ msg }}</h1>
+    <div>Sorry. This site does not exist.</div>
+{% endblock %}
