Testing of github webhook.

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 	<h1>Hello World!</h1>
-	<p>Lorem ipsum dolor bla bla.</p>
+	<p>Lorem ipsum ...</p>
 	<p>
 		<a href="/login/" class="btn btn-primary btn-lg" role="button">Login</a>
 	</p>
